# act_dr6_lenslike

./: .gitignore  ACTDR6LensLike-example.yaml  LICENSE  README.md  get-act-data.sh  pyproject.toml  requirements.txt  setup.py  test.py
.github/: testing.yml
.github/workflows/: publish.yml  testing.yml
act_dr6_lenslike/: __init__.py  act_dr6_lenslike.py
act_dr6_lenslike/data/: README
act_dr6_lenslike/tests/: test_act.py  test_cobaya.py
